# spsb-dtl-view

./: .gitignore  README.md  pyproject.toml
scss/: _colors.scss  _dtl.scss  _fonts.scss  _reset.scss  main.scss
spsb_dtl_view/: env.py
spsb_dtl_view/app/: __main__.py  app.py
spsb_dtl_view/dtl/: dtl.py
spsb_dtl_view/parse/: __init__.py  sheets.py
src/: env.py
src/app/: __main__.py  app.py  scss.py
src/dtl/: __init__.py  dtl.py
src/utils/: __init__.py  dtl.py  url.py  utils.py
static/js/: dtl.js
templates/: dtl.html  rules.html
